--- a/style/styleSearchCPF.css
+++ b/style/styleSearchCPF.css
@@ -1,3 +1,11 @@
+:root{
+
+    --principalColor: #9305f2;
+
+}
+
+
+
 *{
 
     margin: 0 auto;
@@ -26,8 +34,6 @@
 }
 
 #main{
-
-    background-color: green;
     
     width: 1250px;
     height: 100%;
@@ -36,13 +42,12 @@
 
 #titleCPF{
 
-    background-color: aquamarine;
     color: white;
+
+    padding-top: 20px;
 }
 
 #divBusca{
-
-    background-color: red;
 
     margin-top: 200px;
 
@@ -51,8 +56,6 @@
 }
 
 #cpfDiv{
-
-    background-color: yellow;
 
     width: 100%;
     padding: 0;
@@ -66,12 +69,11 @@
 
 #cpfInput{
 
-    background-color: coral;
-
-    width: 95%;
+    width: 90%;
     
     padding: 0;
     margin: 0;
+
 
     /*background-color: blue;*/
 
@@ -82,16 +84,18 @@
 #cpfInsert{
 
     width: 100%;
+    padding: 15px;
+    font-size: 26px;
 
 }
 
 #iconDiv{
 
+    /*background-color: aquamarine;*/
 
-    background-color: pink;
-
-    width: 4%;
-    padding: 010;
+    height: 102px;
+    width: 100px;
+    padding: 8px;
     margin: 010;
 
 
@@ -99,6 +103,9 @@
 
 }
 
-.h1{
-    color: white;
+#buttonSearch{
+
+    height: 70px;
+    width: 70px
+
 }
