--- a/style/newregister.css
+++ b/style/newregister.css
@@ -57,6 +57,8 @@
 
 #cpfDiv{
 
+    background-color: rgb(214, 211, 166);
+
     width: 100%;
     padding: 0;
     margin: 0;
@@ -110,4 +112,26 @@
 .divBusca{
     color: black;
     border-radius: 10px;
+}
+
+#datepicker{
+    padding-top: 20px;
+    width: 10%;
+    padding: 0;
+    margin: 0;
+}
+
+#data{
+    width: 250px;
+    margin-left: 10px;
+
+}
+
+#h3{
+    width: 250px;
+    margin: 0px;
+}
+
+#testt{
+    padding-top: 20px;
 }
