--- a/style/newregister.css
+++ b/style/newregister.css
@@ -63,6 +63,13 @@
     padding: 0;
     margin: 0;
 
+    /*border aqui*/
+
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    display: inline-block;
+    border-radius: 20px;
 
     align-items: center;
     
@@ -177,7 +184,7 @@
     /*divs remedio text*/
 
 #buttonGiant{
-    width: 900px;
+    width: 800px;
 
 }
 
