--- a/style/newregister.css
+++ b/style/newregister.css
@@ -57,7 +57,7 @@
 
 #cpfDiv{
 
-    background-color: rgb(214, 211, 166);
+    background-color: rgb(255, 255, 255);
 
     width: 100%;
     padding: 0;
@@ -66,7 +66,7 @@
     /*border aqui*/
 
     border-width: 2px;
-    border-color: black;
+    border-color: rgb(207, 207, 207);
     border-style: solid;
     display: inline-block;
     border-radius: 20px;
@@ -78,9 +78,9 @@
     /*div caixa de texto*/
 #nameInput{
 
-    width: 100%;
+    width: 97%;
     
-    padding: 0;
+    padding: 8px;
     margin: 0;
 
     align-items: center;
